--- a/support/static/ngTemplates/app.qualityCheck.explore.html
+++ b/support/static/ngTemplates/app.qualityCheck.explore.html
@@ -29,14 +29,14 @@
       <div class="col-md-12">
         <div ng-if="video_chat.agent">
           <div class="col-md-4">
-            <video id="vid_agent" style="width:100%" height="240">
+            <video id="vid_agent{{chatThreadData.uid}}" style="width:100%" height="240">
                   <source ng-src="{{video_chat.visitor}}" type="video/webm">
             </video>
           </div>
 
           <canvas id="canvas_agent" style="display:none"></canvas>
           <canvas id="canvas_visitor" style="display:none"></canvas>
-          <video id="vid_visitor" class="col-md-4"height="240">
+          <video id="vid_visitor{{chatThreadData.uid}}" class="col-md-4"height="240">
               <source ng-src="{{video_chat.agent}}" type="video/webm">
           </video>
           <video id="" class="col-md-4" height="240" controls>
