--- a/HR/static/ngTemplates/app.HR.form.newUser.html
+++ b/HR/static/ngTemplates/app.HR.form.newUser.html
@@ -12,6 +12,10 @@
     <input type="text" class="form-control" ng-model="data.lastName" required placeholder="Last Name">
   </div>
   <div class="form-group">
+    <label>Email</label>
+    <input type="email" class="form-control" ng-model="data.email_id" required placeholder="Email id">
+  </div>
+  <div class="form-group">
     <label >Password</label>
     <input type="password" class="form-control" ng-model="data.password" required placeholder="Password">
   </div>
