--- a/HR/static/ngTemplates/app.HR.manage.users.items.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.items.html
@@ -43,11 +43,11 @@
                 <i class="fa fa-credit-card fa-lg" ></i>
               </span>
         </div> -->
-        <div class="col-md-2">
+        <!-- <div class="col-md-2">
           <span style="cursor:pointer;" ng-click="rowActionClicked('editDesignation')">
                 <i class="fa fa-caret-up fa-2x" style="margin-top:-15px;" ></i>
               </span>
-        </div>
+        </div> -->
         <div class="col-md-2">
           <span style="cursor:pointer;" ng-click="rowActionClicked('editPermissions')">
                 <i class="fa fa-key fa-lg" ></i>
