--- a/support/static/ngTemplates/app.clients.html
+++ b/support/static/ngTemplates/app.clients.html
@@ -22,7 +22,7 @@
       <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
         <uib-tab-heading>
           {{tab.title}}
-          <i ng-if="tab.cancel" class="fa fa-close" ng-click="closeTab($index);"></i>
+          <i ng-if="tab.cancel" class="fa fa-close" style="padding:2px" ng-click="closeTab($index);"></i>
         </uib-tab-heading>
         <div ng-if="tab.app == 'companyEdit'">
           <div ng-include="'/static/ngTemplates/app.customers.form.html'"></div>
