--- a/warehouse/static/ngTemplates/app.warehouse.commodity.html
+++ b/warehouse/static/ngTemplates/app.warehouse.commodity.html
@@ -23,7 +23,7 @@
       </div>
     </div>
     <br>
-    <div class="row">
+    <div class="row" ng-if="contract.activeStatus">
       <div class="col-md-4">
         <label>Name</label>
         <input type="text" class="form-control" ng-model="form.name">
@@ -106,7 +106,7 @@
         </div>
       </div>
       <div ng-if="$index==idx">
-        <div class="row" style="padding:20px">
+        <div class="row" style="padding:20px" ng-if="contract.activeStatus">
           <div class="col-md-5">
             <input type="number" class="form-control" value="" ng-model="commodty.quanty">
           </div>
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="row" ng-if="comodityData.length>0">
-          <div class="row" style="padding-left:55px;">
+          <div class="row" style="padding-left:55px;margin-top:20px">
             <div class="col-md-4 ">
               <label>From</label>
               <div class="input-group" style="width:80%">
