--- a/warehouse/static/ngTemplates/app.warehouse.invoiceDetails.html
+++ b/warehouse/static/ngTemplates/app.warehouse.invoiceDetails.html
@@ -21,6 +21,7 @@
         <th class="text-center">From</th>
         <th class="text-center">To</th>
         <th class="text-center"> Total</th>
+        <th class="text-center"> Download</th>
       </tr>
       <tbody ng-repeat="s in invoice">
         <tr>
@@ -28,7 +29,7 @@
           <td>{{s.fromDate}}</td>
           <td>{{s.toDate}}</td>
           <td>{{s.grandTotal}}</td>
-
+          <td class="text-center"><a ng-if="c.status != 'cancelled'" href="/api/warehouse/downloadInvoice/?contract={{s.contract.pk}}&inoicePk={{s.pk}}" class="btn btn-default" target="_blank"><i class="fa fa-download"></i></a></td>
         </tr>
       </tbody>
     </table>
