--- a/HR/static/ngTemplates/app.HR.manage.users.items.html
+++ b/HR/static/ngTemplates/app.HR.manage.users.items.html
@@ -60,7 +60,8 @@
         </div>
         <div class="col-md-2">
           <span style="cursor:pointer;" ng-click="rowActionClicked('im')">
-                <i class="fa fa-envelope"></i>
+            <i class="fa fa-comments-o fa-lg" aria-hidden="true"></i>
+
               </span>
         </div>
       </div>
