--- a/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
+++ b/warehouse/static/ngTemplates/app.warehouse.contract.explore.html
@@ -226,7 +226,7 @@
     <div class="row">
       <div class="container-fluid">
         <label class="text-muted">Finances</label>
-        <button type="button" class="btn btn-default btn-md pull-right" ng-click="editQuote()" ng-if="activeStatus">
+        <button type="button" class="btn btn-default btn-md pull-right" ng-click="editQuote()" ng-if="contract.activeStatus">
           <i class="fa fa-plus"></i> Quote
         </button><br>
         <div class="container-fluid" style="margin-top:20px;">
