--- a/productsInventory/static/ngTemplates/app.productsInventory.manufacture.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.manufacture.html
@@ -19,6 +19,13 @@
         <generic-Table data="data.tableData" config-Obj="{{config}}" callback-Fn="tableAction"></generic-Table>
       </uib-tab>
 
+      <uib-tab>
+        <uib-tab-heading>
+          In - Process 
+        </uib-tab-heading>
+        <generic-Table data="data.inProcessData" config-Obj="{{inProcessConfig}}" callback-Fn="inProcessTableAction"></generic-Table>
+      </uib-tab>
+
       <uib-tab ng-repeat="tab in tabs" active="tab.active" disable="tab.disabled">
         <uib-tab-heading>
           {{tab.title}}
