--- a/productsInventory/static/ngTemplates/app.productsInventory.manufacture.html
+++ b/productsInventory/static/ngTemplates/app.productsInventory.manufacture.html
@@ -21,7 +21,7 @@
 
       <uib-tab>
         <uib-tab-heading>
-          In - Process 
+          In - Progress 
         </uib-tab-heading>
         <generic-Table data="data.inProcessData" config-Obj="{{inProcessConfig}}" callback-Fn="inProcessTableAction"></generic-Table>
       </uib-tab>
