--- a/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.checkout.html
@@ -140,7 +140,10 @@
                     <!-- <h5 ng-if="c.product.product.name.length>30" style="margin:0px;  height:50px;">{{c.product.product.name.slice(0,30)}}...</h5>
                     <h5 ng-if="c.product.product.name.length<=30" style="margin:0px;  height:50px;">{{c.product.product.name}}</h5> -->
                     <h5 ng-if="c.prod_var==undefined" style="margin:0px; height:50px;"> {{c.product.product.name}}<span ng-if="c.product.product.howMuch!=null">  {{c.product.product.howMuch | convertUnit: c.product.product.unit}} </span> </h5>
-                    <h5 ng-if="c.prod_var" style="margin:0px;  height:50px;">{{c.product.product.name}} <span ng-if="c.product.product.howMuch!=null"> {{c.prod_var.unitPerpack * c.product.product.howMuch | convertUnit: c.product.product.unit}}</span></h5>
+                    <h5 ng-if="c.prod_var" style="margin:0px;  height:50px;">{{c.product.product.name}} <span ng-if="c.product.product.howMuch!=null">
+                      <span ng-if="c.product.product.unit!='Size and Color'&&c.product.product.unit!='Size'"> {{c.prod_var.unitPerpack * c.product.product.howMuch | convertUnit: c.product.product.unit}}</span>
+                      <span ng-if="c.product.product.unit=='Size and Color'||c.product.product.unit=='Size'">  {{c.prod_var.unitPerpack | convertSize: c.product.product.unit}} - {{c.desc}}</span>
+                    </span></h5>
 
                   </div>
                   <div class="col-md-3">
@@ -227,7 +230,11 @@
                     <div class="col-xs-6">
                       <div class="row" style="padding:0px">
                         <h6 ng-if="c.prod_var==undefined" style="margin:0px; height:50px;"> {{c.product.product.name}}<span ng-if="c.product.product.howMuch!=null"> {{c.product.product.howMuch | convertUnit: c.product.product.unit}}</span> </h6>
-                        <h6 ng-if="c.prod_var" style="margin:0px;  height:50px;">{{c.product.product.name}} <span ng-if="c.product.product.howMuch!=null">  {{c.prod_var.unitPerpack * c.product.product.howMuch | convertUnit: c.product.product.unit}} </span> </h6>
+                        <h6 ng-if="c.prod_var" style="margin:0px;  height:50px;">{{c.product.product.name}}
+                          <span ng-if="c.product.product.howMuch!=null">
+                            <span ng-if="c.product.product.unit!='Size and Color'&&c.product.product.unit!='Size'"> {{c.prod_var.unitPerpack * c.product.product.howMuch | convertUnit: c.product.product.unit}}</span>
+                            <span ng-if="c.product.product.unit=='Size and Color'||c.product.product.unit=='Size'">  {{c.prod_var.unitPerpack | convertSize: c.product.product.unit}} - {{c.desc}}</span>
+                          </span></h6>
                         <!-- <h6 ng-if="c.product.product.name.length>30" style="margin:0px;  height:50px;">{{c.product.product.name.slice(0,30)}}...</h6>
                         <h6 ng-if="c.product.product.name.length<=30" style="margin:0px;  height:50px;">{{c.product.product.name}}</h6> -->
                       </div>
