--- a/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.explore.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.vendor.orders.explore.html
@@ -76,7 +76,10 @@
 
             <div class="row">
               <h3 ng-if="pData.prodVar==undefined"> {{pData.productName}} {{pData.product.product.howMuch | convertUnit:pData.product.product.unit}}</h3>
-              <h3 ng-if="pData.prodVar"> {{pData.productName}} {{pData.prodVar[0].unitPerpack * pData.product.product.howMuch | convertUnit: pData.product.product.unit}} </h3>
+              <h3 ng-if="pData.prodVar"> {{pData.productName}}
+                <span ng-if="pData.product.product.unit!='Size and Color'&&pData.product.product.unit!='Size'"> {{pData.prodVar[0].unitPerpack * pData.product.product.howMuch | convertUnit: pData.product.product.unit}} </span>
+                <span ng-if="pData.product.product.unit=='Size and Color'||pData.product.product.unit=='Size'"> {{pData.product.product.howMuch | convertSize: pData.product.product.unit}} {{pData.desc}} </span>
+                 </h3>
             </div>
             <div class="row">
               <div class="col-md-2">
